--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "flickity": "^2.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-flickity-component": "^4.0.7",
     "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.18"
   },
