--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.18"
   },
+  "resolutions": {
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.17",
