--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "@types/workbox-window": "^4.3.4",
     "flickity": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flickity-component": "^4.0.7",
     "react-router-dom": "^7.6.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "vite-plugin-pwa": "^1.0.0",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
