fix: PWA service worker configuration for Vercel deployment
- Updated VitePWA config with scope, base, and manifest properties

- Added navigateFallback and clientsClaim for proper SPA routing

- Configured vercel.json with service worker-specific rewrites and headers

- Added service worker registration script with Workbox integration

- Ensured proper caching headers for SW and workbox assets

- Fixed offline functionality for production deployment on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,40 @@
 {
   "rewrites": [
     {
+      "source": "/sw.js",
+      "destination": "/sw.js"
+    },
+    {
+      "source": "/workbox-:match*",
+      "destination": "/workbox-:match*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
+    },
+    {
+      "source": "/workbox-:match*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache"
+        }
+      ]
     }
   ]
 }
